<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainViewModel"
            type="com.example.mijnmedicijnkastje.screens.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/logoStartscherm"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/background_pills"
            app:layout_constraintBottom_toTopOf="@+id/btnNavToMedicijnkastje"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_mm" />


        <Button
            android:id="@+id/btnNavToMedicijnkastje"
            style="@style/transparantButton"
            android:layout_marginTop="24dp"
            android:text="@string/mijn_medicijnkastje"
            app:layout_constraintBottom_toTopOf="@+id/btnZoekNaarMedicijn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoStartscherm"
            android:onClick="@{() -> mainViewModel.btnNavigateToMedicijnkastClicked()}"/>

        <Button
            android:id="@+id/btnZoekNaarMedicijn"
            style="@style/transparantButton"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> mainViewModel.btnNavigateToMedicijnLijstClicked()}"
            android:text="@string/zoek_naar_medicijn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNavToMedicijnkastje" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>