<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userViewModel"
            type="com.example.mijnmedicijnkastje.screens.user.UserViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/zelfMedAanmaken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_shadow"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/naamPersoonLabel"
                style="@style/titelHoofdletterExtraWitVet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/naamGebruiker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/naamPersoon"
                style="@style/gegevensMedicijnVet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{userViewModel.naam}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/naamPersoonLabel" />


            <TextView
                android:id="@+id/voornaamPersoonLabel"
                style="@style/titelHoofdletterExtraWitVet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/voornaamGebruiker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/naamPersoon" />

            <TextView
                android:id="@+id/voornaamPersoon"
                style="@style/gegevensMedicijnVet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{userViewModel.voornaam}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/voornaamPersoonLabel" />

            <TextView
                android:id="@+id/geboortedatumPersoonLabel"
                style="@style/titelHoofdletterExtraWitVet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/geboortedatumGebruiker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/voornaamPersoon" />

            <TextView
                android:id="@+id/geboortedatumPersoon"
                style="@style/gegevensMedicijnVet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{userViewModel.geboortedatum}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/geboortedatumPersoonLabel" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/lightgreen"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/geboortedatumPersoon"
                tools:layout_editor_absoluteX="25dp">

                <TextView
                    android:id="@+id/lstDagelijkseMedicatiePersoonLabel"
                    style="@style/titelHoofdletterExtraWitVetGroter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/dagelijkseMedicatieGebruiker"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/lstDagelijkseMedicatiePersoonLabel"
                    tools:layout_editor_absoluteX="15dp">

                    <TableRow
                        android:background="@color/green"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:text="Medicatie" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="Tijdstip" />
                    </TableRow>

                    <TableRow
                        android:background="@color/white"
                        android:padding="10dp">

                        <TextView
                            style="@style/doorlopendeTekstGroter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:text="Medicatie 1" />

                        <TextView
                            style="@style/doorlopendeTekstGroter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="8u00" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/black" />

                    <TableRow
                        android:background="@color/white"
                        android:padding="10dp">

                        <TextView
                            style="@style/doorlopendeTekstGroter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:text="Medicatie 2" />

                        <TextView
                            style="@style/doorlopendeTekstGroter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="18u00" />


                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/black" />
                </TableLayout>

                <TextView
                    android:id="@+id/textView"
                    style="@style/doorlopendeTekst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/klikOmTeVerwijderen"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>